# eager2

./: Cargo.toml  LICENSE  README.md  README.tpl
.github/workflows/: ci.yml
dummy/: Cargo.toml
dummy/src/: lib.rs
eager2/: Cargo.toml  build.rs
eager2-core/: Cargo.toml
eager2-core/src/: consts.rs  egroup.rs  exec.rs  funcs.rs  lib.rs  parse.rs  rules.rs  state.rs  utils.rs
eager2/includes/: simple.rs  some_type.jtd.json
eager2/src/: apply.rs  exec.rs  impls.rs  init.rs  lib.rs  parse.rs  rules.rs
eager2/tests/: bools.rs  ccase.rs  column.rs  core.rs  decl_macro_v2.rs  delay.rs  eager.rs  eager_macro_rules.rs  env.rs  line.rs  proc_macro.rs  suspend.rs
examples/: jdt.rs
src/: egroup.rs  exec.rs  impls.rs  lib.rs  rules.rs  state.rs  utils.rs
tests/: bools.rs  ccase.rs  concat.rs  eager.rs  eager_macro.rs  eager_macro_rules.rs  env.rs  lazy.rs  stringify.rs  suspend.rs
