[package]
name = "dummy"
version = "1.1.2"
authors = ["Daniel Bloom"]
edition = "2021"
categories = ["development-tools"]
description = "Proc-macros for eager macro expansion"
documentation = "https://docs.rs/eager2"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/eager2"
readme = "../README.md"
rust-version = "1.88"

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
eager2 = { path = "../eager2" }
eager2-core = { workspace = true }
