[package]
name = "eager2-core"
version = "1.1.0"
authors = ["Daniel Bloom"]
edition = "2021"
categories = ["development-tools"]
description = "eager2 internal helper crate"
documentation = "https://docs.rs/eager2"
license = "MIT"
repository = "https://github.com/Daniel-Aaron-Bloom/eager2"
readme = "../README.md"
rust-version = "1.70"

[lib]
path = "src/lib.rs"

[dependencies]
proc-macro2 = { version = "1", optional = true }
quote = { version = "1", optional = true }

[features]
"testing" = ["proc-macro2", "quote"]
